fix css, add js
fix scrollbar, add animation for scroll to top btn

--- a/style.css
+++ b/style.css
@@ -653,12 +653,7 @@ footer {
     cursor: pointer;
     z-index: 100;
     opacity: 0;
-    /* Initial opacity */
-    animation: fade-in 1s forwards;
-}
-
-#scroll-top-btn:hover {
-    background-color: #333;
+    transition: opacity 0.5s; /* Smooth transition */
 }
 
 #scroll-top-btn i {
@@ -666,14 +661,8 @@ footer {
     font-size: 1.2rem;
 }
 
-#scroll-top-btn {
-    animation: fade-in 1s forwards;
-}
-
-@keyframes fade-in {
-    to {
-        opacity: 1;
-    }
+#scroll-top-btn.show {
+    opacity: 1;
 }
 
 .copyrights {
@@ -719,7 +708,13 @@ footer {
 
 ::-webkit-scrollbar-thumb{
     background-color: #f7f7f7;
-    border-radius: 10px;
+    border-radius: 10%;
+    transition: background-color 0.3s;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: #ccc;
 }
 
 
@@ -854,10 +849,6 @@ footer {
         grid-row: span 1;
     }
 
-    .grid-wrapper .image:hover {
-        transform: scale(1.05);
-    }
-
     .grid-wrapper .tall,
     .grid-wrapper .wide,
     .grid-wrapper .big {
@@ -875,5 +866,16 @@ footer {
 
     .copyrights .social i{
         margin-left: 5px;
+    }
+
+    .scroll-to-top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1000; /* Ensure it is above other elements */
+    }
+
+    .copyrights .social {
+        margin-bottom: 60px; /* Add margin to avoid overlap with scroll-to-top button */
     }
 }
