--- a/style_gallery.css
+++ b/style_gallery.css
@@ -246,15 +246,17 @@ p {
     justify-content: center;
     cursor: pointer;
     z-index: 100;
-}
-
-#scroll-top-btn:hover {
-    background-color: #333;
+    opacity: 0;
+    transition: opacity 0.5s;
 }
 
 #scroll-top-btn i {
     color: #f7f7f7;
     font-size: 1.2rem;
+}
+
+#scroll-top-btn.show {
+    opacity: 1;
 }
 
 
@@ -377,7 +379,13 @@ footer{
 
 ::-webkit-scrollbar-thumb{
     background-color: #f7f7f7;
-    border-radius: 10px;
+    border-radius: 10%;
+    transition: background-color 0.3s;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background-color: #ccc;
 }
 
 
@@ -427,6 +435,14 @@ footer{
         padding-bottom: 20px;
     }
 
-    
-    
+    .scroll-to-top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1000; /* Ensure it is above other elements */
+    }
+
+    .copyrights .social {
+        margin-bottom: 70px; /* Add margin to avoid overlap with scroll-to-top button */
+    }
 }
